tests/NormalTests/paczka2/big_fuzzy/19418052.err
Error in line 2: sU4bf S834 98,6
Error in line 3: sU4bf S350 5,2
Error in line 12: GMCX0YO4y S834 67,9
Error in line 59: QJn47p A897 31,00
Error in line 62: NZnT S834 82,7
Error in line 65: Xlcb2qgcGyt A458 22,7
Error in line 68: Xlcb2qgcGyt A897 82,3
Error in line 74: OuABN8m S834 25,9
Error in line 79: OuABN8m A897 41,7
Error in line 96: GMCX0YO4y S350 82,2
Error in line 106: sU4bf A458 3h,7
Error in line 120: GMCX0YO4y S350 28,6
Error in line 123: GMCX0YO4y S834 57,9
Error in line 113: NZnT A897 64,7
Error in line 128: NZnT S350 5,1
Error in line 138: GMCX0YO4y A458 13,4
Error in line 142: QJn47p A458 39,9
Error in line 145: QJn47p S834 14,8
Error in line 147: QJn47p A458 32,1
Error in line 122: sU4bf S834 147,8
Error in line 151: OuABN8m A897 61,6
Error in line 162: sU4bf A897 107,3
Error in line 179: NZnT A897 71,L
Error in line 176: sU4bf A458 11,6
Error in line 180: sU4bf S350 91,7
Error in line 191: QJn47p A897 314,89
Error in line 196: A458 A897 86,5
Error in line 177: NZnT A458 247,4
Error in line 188: QJn47p A897 96,3
Error in line 208: QJn47p A458 46,7
Error in line 212: OuABN8m S350 49,6
Error in line 219: QJn47p S350 76,9
Error in line 224: Xlcb2qgcGyt S834 29,0
Error in line 232: Xlcb2qgcGyt S350 67,7
Error in line 228: sU4bf S834 4,1
Error in line 233: QJn47p S834 5,2
Error in line 235: sU4bf A458 16,5
Error in line 236: QJn47p A458 44,1
Error in line 240: NZnT S834 82,3
